# secret_santa_rs

./: .gitignore  Cargo.toml  README.md
crates/secret_santa_lib/: Cargo.toml
crates/secret_santa_lib/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
src/: main.rs
